// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryItem handles long titles gracefully 1`] = `
<TouchableOpacity
  accessibilityLabel="This is a very long category title that might cause layout issues if not handled properly"
  accessibilityRole="button"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  disabled={false}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#F5F9F6",
        "borderColor": "#E5EBE6",
        "borderRadius": 12,
        "borderWidth": 1,
        "flex": 1,
        "justifyContent": "space-between",
        "minHeight": 180,
        "paddingStart": 16,
        "paddingTop": 16,
      },
      undefined,
    ]
  }
  testID="category-item"
>
  <Text
    accessibilityRole="header"
    ellipsizeMode="tail"
    numberOfLines={2}
    style={
      [
        {
          "fontSize": 18,
          "fontWeight": "600",
          "marginBottom": 8,
          "textAlign": "left",
        },
        undefined,
      ]
    }
  >
    This is a very long category title that might cause layout issues if not handled properly
  </Text>
  <Image
    accessibilityLabel="This is a very long category title that might cause layout issues if not handled properly category image"
    accessibilityRole="image"
    cachePolicy="memory-disk"
    contentFit="cover"
    source={
      {
        "uri": "https://example.com/test.jpg",
      }
    }
    style={
      {
        "borderRadius": 8,
        "height": 100,
        "width": "100%",
      }
    }
    transition={200}
  />
</TouchableOpacity>
`;

exports[`CategoryItem renders correctly with required props 1`] = `
<TouchableOpacity
  accessibilityLabel="Test Category"
  accessibilityRole="button"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  disabled={false}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#F5F9F6",
        "borderColor": "#E5EBE6",
        "borderRadius": 12,
        "borderWidth": 1,
        "flex": 1,
        "justifyContent": "space-between",
        "minHeight": 180,
        "paddingStart": 16,
        "paddingTop": 16,
      },
      undefined,
    ]
  }
  testID="category-item"
>
  <Text
    accessibilityRole="header"
    ellipsizeMode="tail"
    numberOfLines={2}
    style={
      [
        {
          "fontSize": 18,
          "fontWeight": "600",
          "marginBottom": 8,
          "textAlign": "left",
        },
        undefined,
      ]
    }
  >
    Test Category
  </Text>
  <Image
    accessibilityLabel="Test Category category image"
    accessibilityRole="image"
    cachePolicy="memory-disk"
    contentFit="cover"
    source={
      {
        "uri": "https://example.com/test.jpg",
      }
    }
    style={
      {
        "borderRadius": 8,
        "height": 100,
        "width": "100%",
      }
    }
    transition={200}
  />
</TouchableOpacity>
`;
